# FastAPI_Basic_API

./: README.md
FA/: main.py  pyproject.toml
FA/app/: app.py
